[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simpai"  # 包名（在 PyPI 上必须唯一）
version = "0.0.1"
authors = [
  { name="Simpidbit Isaiah", email="simpidbit@gmail.com" },
]
description = "AI utilities with PyTorch."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/my_package"

[tool.setuptools.packages.find]
where = ["src"]
